6.2.2
-----
1. Fix 'All tracks' track ordering.

6.2.1
-----
1. Fix 3rd party scollable lists headers.
2. Fix clicking on '+ N more' in MAI album view.
3. Fix displaying of advanced search results.
4. Require at least 1000x800px for 'Reposition dialogs' option.

6.2.0
-----
 1. Add icons to global search entries.
 2. When showing 'N Items' in subtitle, adjust for number of headers.
 3. Fix sorting of scrollable list items in 'Interface' settings dialog.
 4. Fix colours in logging view.
 5. Fix '(More)' showing on list items when not applicable.
 6. Allow 'Favourites' as scrolled list.
 7. Add search history.
 8. If using grid for 'Home', then show artist, album, works, playlists (if
    image support enabled), and 'Search on' search results in scrollable lists.
 9. Use dialog for virtual library selection.
10. Remove small icon-only grid option, and default to always set.
11. Remove play/add/etc menu from search result headers.
12. Change now-playing expand/collapse icons.
13. If sufficient space, place now-plying collapse button bottom left in
    desktop layout. If insufficient space, add to cover overlay.
14. Show classical work reviews in MAI and browse.
15. Fix menus sometimes having separator as first item.
16. Indicate current track when browsing saved playlists.
17. When showing '...' menu button next to 'Information', show to left for
    consistency.
18. Fix 'Do not set volume' in 'Group player' update dialog - thanks to SamY.

6.1.7
-----
1. Fix dialog list sizing on iOS.
2. Fix home button in iframe dialogs.
3. Fix 'Show when wide enough' string.
4. Show home button in certain dialogs, if requested by caller, regardless of
   setting.
5. If a SlimBrowse header has no actions then ignore clicks.
6. Ignore swipes when non-pinned queue is shown.
7. Fix various actions (such as scrolling) when non-pinned queue shown over
   now-playing.
8. Show 'More' on far left for SlimBrowse headers with an action.

6.1.6
-----